syntax = "proto3";

import "google/protobuf/timestamp.proto";

package plutus;

option go_package = "plutus/api/proto";

import "core.proto";

message PaymentInvoice {
  string id = 1;
  string external_id = 2;
  string request_id = 3;
  PaymentInvoiceStatus status = 4;
  string payment_link_url = 5;
  google.protobuf.Timestamp expires_at = 6;
  float amount = 7;
  string currency = 8;
  string description = 9;
  string provider = 10;
  int32 customer_id = 11;
  PaymentFeature payment_feature = 12;
}

message TokenInvoice {
  int32 id = 1;
  int32 user_id = 2;
  optional string product_price_list_id = 3;
  bool is_top_up = 4;
  float previous_token_balance = 5;
  float new_token_balance = 6;
  float token_used = 7;
}

message TokenPriceList {
  int32 id = 1;
  string name = 2;
  string description = 3;
  float token= 4;
  float price = 5;
  string currency = 6;
}

message ProductPriceList {
  string id = 1;
  string name = 2;
  string description = 3;
  float token = 4;
  Denominator denominator = 5;
}

message Balance{
  int32 user_id = 2;
  float token_balance = 3;
}

enum Denominator {
  ONCE = 0;
}

enum PaymentInvoiceStatus {
  PENDING = 0;
  COMPLETED = 1;
  FAILED = 2;
}

enum PaymentFeature {
  PREORDER = 0;
  TOKEN_TOP_UP = 1;
}