syntax = "proto3";

package plutus;

option go_package = "plutus/api/proto";

import "google/protobuf/timestamp.proto";
import "core.proto";
import "plutus/object.proto";

service PaymentService {
  rpc ListTokenPriceList(core.GenericRequest) returns (TokenPriceListListResponse) {}
  rpc GetTokenPriceListById(GetTokenPriceListByIdRequest) returns (TokenPriceListResponse) {}

  rpc GetProductPriceListById(GetProductPriceListByIdRequest) returns (ProductPriceListResponse) {}

  rpc GetBalance(core.GenericRequest) returns (BalanceResponse) {}
  rpc TopUpBalance(TopUpBalanceRequest) returns (PaymentInvoiceResponse) {}
  rpc PurchaseProduct(PurchaseProductRequest) returns (TokenInvoiceResponse) {}

  rpc CreatePaymentInvoice(CreatePaymentInvoiceRequest) returns (PaymentInvoiceResponse) {}
  rpc GetPaymentInvoiceById(GetPaymentInvoiceByIdRequest) returns (PaymentInvoiceResponse) {}
  rpc GetPaymentInvoiceByExternalId(GetPaymentInvoiceByExternalIdRequest) returns (PaymentInvoiceResponse) {}
  rpc GetPaymentInvoiceByRequestId(GetPaymentInvoiceByRequestIdRequest) returns (PaymentInvoiceResponse) {}
}

message GetTokenPriceListByIdRequest {
  core.BaseRequest base = 1;
  int32 id = 2;
}

message TokenPriceListResponse {
  core.BaseResponse base = 1;
  TokenPriceList token_price_list = 2;
}

message GetProductPriceListByIdRequest {
  core.BaseRequest base = 1;
  string id = 2;
}

message ProductPriceListResponse {
  core.BaseResponse base = 1;
  ProductPriceList product_price_list = 2;
}

message TokenPriceListListResponse {
  core.BaseResponse base = 1;
  repeated TokenPriceList token_price_lists = 2;
}

message BalanceResponse {
  core.BaseResponse base = 1;
  Balance balance = 2;
}

message TokenInvoiceResponse {
  core.BaseResponse base = 1;
  TokenInvoice token_invoice = 2;
}

message TopUpBalanceRequest {
  core.BaseRequest base = 1;
  int32 token_price_list_id = 2;
  string success_return_url = 3;
  string failure_return_url = 4;
}

message PurchaseProductRequest {
  core.BaseRequest base = 1;
  string product_price_list_id = 2;
}

message GetPaymentInvoiceByIdRequest {
  core.BaseRequest base = 1;
  int32 id = 2;
}

message GetPaymentInvoiceByExternalIdRequest {
  core.BaseRequest base = 1;
  string external_id = 2;
}

message GetPaymentInvoiceByRequestIdRequest {
  core.BaseRequest base = 1;
  string request_id = 2;
}

message CreatePaymentInvoiceRequest {
  core.BaseRequest base = 1;
  int32 user_id = 2;
  float amount = 3;
  string currency = 4;
  string description = 5;
  string success_return_url = 6;
  string failure_return_url = 7;
  int32 duration_in_seconds = 8;
  PaymentFeature payment_feature = 9;
}

message PaymentInvoiceResponse {
  core.BaseResponse base = 1;
  PaymentInvoice payment = 2;
}
